--- a/index.html
+++ b/index.html
@@ -1,54 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
-    <link rel="icon" href="./images/html5.png">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="icon" href="./images/html5.png" />
     <title>Document</title>
-</head>
-<body>
-    <header>  
-        <nav>  
-        <ul>  
-        <li>  
-        <a href="index.html"> Home </a>  
-        </li>  
-        <li>  
-        <a href="links.html">links </a>  
-        </li>  
-        <li>  
-        <a href="contact.html"> Contact </a>  
-        </li>  
-        <li> <a href="media.html">media </a>  
-        </li>  
-        <li>  
-        <a href="register.html">Register</a>  
-        </li>  
-        </ul>  
-        </nav>  
-        </header>  
-        <div>
-            <h1>
-                web Technology
-            </h1>
-            <p>This website is about webtechonolgy winter semester 2023.An outline of the content we are going to address in this course is the following:</p>
-            <p>1.Hypertext Markup Language(HTML)<br>
-                2.Casceding Style Sheets(CSS)<br>
-                3.Bootsrap<br>
-                4.Javastrap<br>
-                5.Node.js<br>
-            </p>
-            <hr>
-            <h2>Media Files</h2>
-            <p>Details about the media files can be found in Media page. please <a href="media.html">click here</a> to navigate to the media page .</p>
-            <h3>Making connection to links</h3>
-            <p><a href="links.html">Here</a> you can find further information to links.</p>
-            <hr>
-            <p>If you have any questions , then to contact us navigate to <a href="contact.html">contact page.</a></p>
-            <p><a href="">Back to top</a></p>
-     
-        </div>
-        
-</body>
+  </head>
+  <body>
+    <header>
+      <nav>
+        <ul>
+          <li>
+            <a href="index.html"> Home </a>
+          </li>
+          <li>
+            <a href="links.html">links </a>
+          </li>
+          <li>
+            <a href="contact.html"> Contact </a>
+          </li>
+          <li><a href="media.html">media </a></li>
+          <li>
+            <a href="register.html">Register</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+    <div>
+      <h1>Web Technology</h1>
+      <p>
+        This website is about webtechonolgy winter semester 2023.An outline of
+        the content we are going to address in this course is the following:
+      </p>
+      <p>
+        1.Hypertext Markup Language(HTML)<br />
+        2.Casceding Style Sheets(CSS)<br />
+        3.Bootsrap<br />
+        4.Javastrap<br />
+        5.Node.js<br />
+      </p>
+      <hr />
+      <h2>Media Files</h2>
+      <p>
+        Details about the media files can be found in Media page. please
+        <a href="media.html">click here</a> to navigate to the media page .
+      </p>
+      <h3>Making connection to links</h3>
+      <p>
+        <a href="links.html">Here</a> you can find further information to links.
+      </p>
+      <hr />
+      <p>
+        If you have any questions , then to contact us navigate to
+        <a href="contact.html">contact page.</a>
+      </p>
+      <p><a href="">Back to top</a></p>
+    </div>
+  </body>
 </html>
